Bug 415810 - Recovered autosaves are by default saved in incorrect location
Summary: Recovered autosaves are by default saved in incorrect location
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-02 15:59 UTC by Tiar
Modified: 2020-01-08 13:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2020-01-02 15:59:12 UTC
SUMMARY
When you recover an autosave (tested on unnamed ones, those that appear at the opening of Krita), Save and Save As dialogs shows AppData/Local/Temp as a default save location. This cause confusion etc.
In my opinion the default save location in this case should be the same as for newly created unsaved/unnamed files (which is Pictures folder).


STEPS TO REPRODUCE
1. Open Krita. Make a new image. Paint a few strokes. Wait for autosave.
2. Close Krita from outside.
3. Open Krita again.
4. Recover the file.
5. Try to use Save or Save As dialog.

OBSERVED RESULT
Both tries to Save into Temp directory.

EXPECTED RESULT
Both should save into Pictures directory by default.

SOFTWARE/OS VERSIONS
Krita

 Version: 4.2.9-alpha (git 8367d49)
 Languages: pl, en_US, en, pl, en_US, en, pl, en_US, en, pl, en_US, en, pl_PL, pl, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.18362
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (Intel(R) UHD Graphics 630 Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 10, greenBufferSize 10, blueBufferSize 10, alphaBufferSize 2, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::bt2020PQColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 10, greenBufferSize 10, blueBufferSize 10, alphaBufferSize 2, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::bt2020PQColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 


Hardware Information

   GPU Acceleration: auto
   Memory: 16191 Mb
   Number of Cores: 12
  Swap Location: C:/Users/Agata/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/Agata/AppData/Local/Temp
  Undo Enabled: 1
  Undo Stack Limit: 30
  Use OpenGL: 1
  Use OpenGL Texture Buffer: 1
  Use AMD Vectorization Workaround: 0
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 60
  Use Backup Files: 1
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Use Win8 Pointer Input: 0
  Use RightMiddleTabletButton Workaround: 0
  Levels of Detail Enabled: 0
  Use Zip64: 0
Comment 1 Halla Rempt 2020-01-03 11:34:00 UTC
Git commit b4c44d395a7debd33c4bc1d9de52dcd556980a9a by Boudewijn Rempt.
Committed on 03/01/2020 at 11:33.
Pushed by rempt into branch 'master'.

Set the default location for restored files to QStandardPaths::PicturesLocation

M  +10   -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/b4c44d395a7debd33c4bc1d9de52dcd556980a9a
Comment 2 Halla Rempt 2020-01-08 13:56:23 UTC
Git commit a03c16cc9b8777f8c6ebf7a6e62a02cdcccb6e3a by Boudewijn Rempt.
Committed on 08/01/2020 at 13:33.
Pushed by rempt into branch 'krita/4.2'.

Set the default location for restored files to QStandardPaths::PicturesLocation

M  +10   -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/a03c16cc9b8777f8c6ebf7a6e62a02cdcccb6e3a