Set the default location for restored files to QStandardPaths::PicturesLocation

BUG:415810